--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="change">Change</string>
     <string name="togglebutton">ToggleButton</string>
     <string name="save">save</string>
+    <string name="enter_inflow">Enter Inflow</string>
 </resources>
